@@ -2,7 +2,7 @@
 
 For a first release
 
-- check each contribution 
+- check each contribution:
   
 - release them
 
